--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Hello This is Dk Lagadhir(CI/CD Test)</h1>
+        <h1>Hello This is Dk Lagadhir(CI/CD Tests)</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
